data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_475.wast
;; 6. **Test Description**: Use a `loop` with a default branch in `br_table` that erroneously keeps the loop running indefinitely due to incorrect handling of out-of-bound indices.    **Constraint**: Ensuring `br_table` default behavior correctly exits loops.    **Infinite Loop Relevance**: Verifies if out-of-bound handling in `br_table` does not cause infinite loops.

(assert_invalid
  (module (func $loop-br_table-default-infinite-loop
    (block
      (br 1)
      (loop
        (br_table 0 1 (i32.const 2))
      )
    )
  ))
  "out-of-bound handling causes infinite loop"
)